--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -215,17 +215,17 @@
 
   
 
-<div class="third-strip">
+<div class="second-strip">
   <div class="container">
-   <div class="third-strip-inner">
+   <div class="second-strip-inner">
     <h1>Why Choose Us </h1>
     <p>Explore Our Completed Services! Consectetur adipiscing elitt elit tellus, luctus pulvinar dapibus leoconsectetur luctus nec.</p>
   </div><!-- /.container --> 
-  </div> <!-- /.third-strip-inner -->
+  </div> <!-- /.second-strip-inner -->
 
 
 
-   <div class="third-strip-inner-content">  
+   <div class="second-strip-inner-content">  
     <div class="container"> 
       <div class="row">
         {% for product in products %} 
@@ -244,8 +244,8 @@
       </div><!-- /.row -->  
       
 </div><!-- /.container -->
-   </div><!-- /.third-strip-inner-content -->
- </div><!-- /.third-strip -->
+   </div><!-- /.second-strip-inner-content -->
+ </div><!-- /.second-strip -->
 
 
 
