--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -227,7 +227,7 @@
 
    <div class="second-strip-inner-content">  
     <div class="container"> 
-      <div class="row">
+      <div class="row d-flex flex-wrap">
         {% for product in products %} 
           {% if product.category == 'why-choose-us' %}
           <div class="col-md-4">
