--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -231,12 +231,13 @@
         {% for product in products %} 
           {% if product.category == 'why-choose-us' %}
           <div class="col-md-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img src="media/{{product.image}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{product.title}}</h5>
           <p class="card-text">{{product.description}}</p>
         </div>
+      </div>
       </div>
           
         {% endif %} 
