--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -3,7 +3,6 @@
   box-sizing: border-box;
 }
 body{
-  line-height: 1.5;
   background-color: black;
 }
 .top-bar{
@@ -56,29 +55,70 @@ body{
 
 
 
-.mid-bar{
-    display: flex;
-    justify-content: space-between;
-    height: 100px;
-    background-color: black;
+.mid-bar-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .header-logo img{
     width: 200px;
-    height: 100px;
+    height: 110px;
 
 }
-
-.navbaar {
-    font-size: large;
-    border-radius: 28px;
-    padding: 2px;
-    margin-top: 10px;
-    color: white;
+.navbar-container {
+  flex-grow: 1;
+  margin-left: 20px;
 }
-  .navbaar ul li :hover{
-    color: green !important;
-  }
+
+.nav-3 ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  gap: 10px;
+}
+.nav-3 ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 100;
+}
+.navbar ul li a:hover {
+  color: darkgreen;
+  font-weight: bolder;
+}
   
+
+/* Responsive styling */
+@media (max-width: 768px) {
+  .mid-bar-inner {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-logo {
+    margin-bottom: 10px;
+  }
+
+  .nav-3 ul {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .nav-3 ul li {
+    margin-right: 10px;
+  }
+
+  .nav-3 ul li a {
+    font-size: 14px;
+  }
+}
+.nav-3 ul li {
+  margin-right: 15px;
+}
+
 
   .carousel-wrap {
     margin: 90px auto;
