--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -46,101 +46,76 @@
 
 
           <div class="mid-bar">
-
-
-          <div class="header-logo">
-            <img src="{% static 'img/logo.jpg' %}" alt="">
-
-                      
+              <div class="mid-bar-inner">
+                <div class="header-logo">
+                  <img src="{% static 'img/logo.jpg' %}" alt="Logo">
                 </div>
-
-<div class="navbaar">
-    <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}">About us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Browse products</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Blog
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Blog Grid</a></li>
-                  <li><a class="dropdown-item" href="#">Blog standard</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Blog Details</a></li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Store list</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Contact</a>
-              </li>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
-  </nav>
-</div>
-
-
-
-
-
-<div class="nav-3">
-  <div class="container">
-  <div class="nav-3-inner">
-    <ul>
-      <div class="d-flex">
-        <div>
-          <span><li><a href="#"><i style="font-size: 30px;" class="bi bi-telephone-plus"></i></a></li></span>
-        </div>
-        <div>
-          <p style="margin: 0;",  style="color: grey;">Click to call</p>
-          <p style="margin: 0;">+347-274-8816</p>
-        </div>
-      </div>
-    <li><a href="#"><i class="bi bi-search"></i></a></li>
-    <li><a href="#"><i class="bi bi-heart"></i></a></li>
-    <li><a href="{% url 'register' %}"><i class="bi bi-person-lines-fill"></i></a></li>
-  </ul>
-
-
-  </div><!-- /.nav-3-inner -->
-</div><!-- /.container -->
-</div><!-- /.nav-3 -->
-
-
-
-
-
-
-
-
-
-</div><!-- /.mid-bar -->
-
+                <!-- /.header-logo -->
+          
+                <div class="navbar-container">
+                  <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                          <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="{% url 'about' %}">About us</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Browse products</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
+                              <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Blog Grid</a></li>
+                                <li><a class="dropdown-item" href="#">Blog standard</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Blog Details</a></li>
+                              </ul>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Store list</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Contact</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </nav>
+                </div>
+                <!-- /.navbar-container -->
+          
+                <div class="nav-3">
+                  <ul class="d-flex align-items-center">
+                    <li class="d-flex align-items-center">
+                      <a href="#"><i class="bi bi-telephone-plus" style="font-size: 30px;"></i></a>
+                      <div class="ms-2">
+                        <p class="mb-0" style="color: grey;">Click to call</p>
+                        <p class="mb-0">+347-274-8816</p>
+                      </div>
+                    </li>
+                    <li><a href="#"><i class="bi bi-search"></i></a></li>
+                    <li><a href="#"><i class="bi bi-heart"></i></a></li>
+                    <li><a href="{% url 'register' %}"><i class="bi bi-person-lines-fill"></i></a></li>
+                  </ul>
+                </div>
+                <!-- /.nav-3 -->
+              </div>
+              <!-- /.mid-bar-inner -->
+            </div>
+          <!-- /.mid-bar -->
 
 
 
