--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -1,4 +1,5 @@
-{% load static %} {% include 'header.html' %}
+{% load static %} 
+{% include 'header.html' %}
 <head>
   <title>Onlineauctions</title>
 </head>
