--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -252,6 +252,28 @@
 
 
 
+
+ <div class="review-section">
+  <h2>What Clients Say</h2>
+  <p>Explore the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success, and future growth.</p>
+  <div class="review-section-inner">
+    {% for product in products %} 
+          {% if product.category == 'client-review' %}
+      <div class="card">
+          <img src="media/{{product.image}}" alt="Johan Martin">
+          <p>{{product.description}}</p>
+          <h3>{{product.title}}</h3>
+      </div>
+      {% endif %} 
+        {% endfor %}
+
+  </div>
+  </div>
+
+
+
+
+
  
 
 
