--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -807,6 +807,8 @@ transition:all 0.5s ease;
 .review-section .card img {
   border-radius: 50%;
   margin-bottom: 15px;
+  max-width: fit-content;
+  max-height: fit-content;
 }
 
 .review-section .card p {
