--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -812,6 +812,17 @@ transition:all 0.5s ease;
   margin-bottom: 5px;
 }
 
+@keyframes slide {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(calc(-100% - 20px));
+  }
+}
+
+
+
 /* Responsive Design */
 @media screen and (max-width: 768px) {
   .review-section-inner {
