--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -801,7 +801,7 @@ transition:all 0.5s ease;
   border-radius: 50%;
   margin-bottom: 15px;
   max-width: 100px;
-  height: auto;
+  height: 105px;
 }
 
 .review-section .card p {
@@ -816,11 +816,17 @@ transition:all 0.5s ease;
 
 @keyframes slide {
   0% {
-      transform: translateX(0);
+      
   }
   100% {
       transform: translateX(calc(-100% - 20px));
   }
+  100% {
+    transform: translateX(calc(-100% - 20px));
+}
+0% {
+  transform: translateX(0);
+}
 }
 
 
