--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -254,7 +254,7 @@
 
 
  <div class="review-section">
-  <h2>What Clients Say</h2>
+  <h2><b>What Clients Say</b></h2>
   <p>Explore the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success, and future growth.</p>
   <div class="review-section-inner">
     {% for product in products %} 
