--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -220,7 +220,7 @@
   <div class="container">
    <div class="second-strip-inner">
     <h1>Why Choose Us </h1>
-    <p>Explore Our Completed Services! Consectetur adipiscing elitt elit tellus, luctus pulvinar dapibus leoconsectetur luctus nec.</p>
+    <p style="color: grey;">Explore Our Completed Services! Consectetur adipiscing elitt elit tellus,<br> luctus pulvinar dapibus leoconsectetur luctus nec.</p>
   </div><!-- /.container --> 
   </div> <!-- /.second-strip-inner -->
 
@@ -255,7 +255,7 @@
 
  <div class="review-section">
   <h2><b>What Clients Say</b></h2>
-  <p style="color: grey;">Explore the world's best & largest Bidding marketplace with our beautiful Bidding products.<br> We want to be a part of your smile, success, and future growth.</p>
+  <p style="color: rgb(171, 161, 161);">Explore the world's best & largest Bidding marketplace with our beautiful Bidding products.<br> We want to be a part of your smile, success, and future growth.</p>
   <div class="review-section-inner">
     {% for product in products %} 
           {% if product.category == 'client-review' %}
