--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -718,7 +718,10 @@ transition:all 0.5s ease;
   text-align: center;
   color: white;
   background-color: black;
-  color: white;
+}
+.second-strip-inner .card{
+  border: 3px;
+  border-color: white;
 }
 
 
