--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -276,6 +276,7 @@ transform: scale(1.1);
   transition: all 0.3s;
   margin-top: 30px;
   background-color: black;
+  color: white;
   
 
 }
@@ -722,6 +723,8 @@ transition:all 0.5s ease;
 .second-strip-inner .card{
   border: 3px;
   border-color: white;
+  background-color: black;
+  color: white;
 }
 
 
