--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -719,7 +719,7 @@ transition:all 0.5s ease;
   text-align: center;
 
 }
-.second-strip-inner .card{
+.second-strip-inner .card-body{
   border: 3px;
   border-color: white;
   background-color: black;
