--- a/oas-env/oas/templates/footer.html
+++ b/oas-env/oas/templates/footer.html
@@ -11,7 +11,7 @@
         <div class="row text-center text-md-left">
             <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Bid Out</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Soluta, illo quae! Fugit repellendus <br> itaque fuga dicta?</p>
+                <p style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Soluta, illo quae! Fugit repellendus <br> itaque fuga dicta?</p>
             </div>
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
@@ -56,13 +56,13 @@
                         <li>
                             <div class="for-i">
                                 <img src="{% static 'img/f1.jpg'%}" alt="" style="max-width: 60px; max-height: 60px;">
-                                <a>An Introvert's guide to be successful at home</a>
+                                <a style="color: white;">An Introvert's guide to be successful at home</a>
                                 <time datetime="2022-11-03T04:40:57+00:00" class="wp-block-latest-posts__post-date">November 3, 2022</time>
                                 <img src="{% static 'img/f2.jpg'%}" alt="" style="max-width: 60px; max-height: 60px;">
-                                <a>Why you should (ofeten) pay more for links</a>
+                                <a  style="color: white;">Why you should (ofeten) pay more for links</a>
                                 <time datetime="2022-11-03T04:40:57+00:00" class="wp-block-latest-posts__post-date">November 3, 2022</time>
                                 <img src="{% static 'img/f3.jpg'%}" alt="" style="max-width: 60px; max-height: 60px;">
-                                <a>Dravid droga still has faith in online creative </a>
+                                <a  style="color: white;">Dravid droga still has faith in online creative </a>
                                 <time datetime="2022-10-29T05:43:52+00:00" class="wp-block-latest-posts__post-date">October 29, 2022</time>
                             </div><!-- /.for-i -->
                         </li>
