--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -60,6 +60,7 @@ body{
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  color: white;
 }
 .header-logo img{
     width: 200px;
