--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -55,7 +55,7 @@
                 <div class="navbar-container">
                   <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation" style="color: white;">
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
